Max duration changes automatically on change submit

--- a/app/src/templates/userReservationDetails.hbs
+++ b/app/src/templates/userReservationDetails.hbs
@@ -1,4 +1,4 @@
-<form name="userReservationDetailsForm" onsubmit="return false;" id="detailsWrapper">
+<form name="userReservationDetailsForm" id="detailsWrapper">
   <h2 id="newTitle" contentEditable="true">{{title}}</h2>
 
   <div class="contentWrapper">
@@ -21,7 +21,7 @@
     <label class="reservationDetailsLabel">Duration: </label><span id="userDetailsDuration" class="reservationContent"></span>
   </div>
 
-  <button id="updateTitle" class="btn btn-success btn-lg" type="submit">Save</button>
+  <button id="updateTitle" class="btn btn-success btn-lg">Save</button>
   <button id="deleteReservation" class="btn btn-danger btn-lg">Delete reservation</button>
   <button id="cancelReservation" class="btn btn-lg">Cancel</button>
 </form>
