Style changes on maxDuration and userDetails

--- a/app/src/style/calendar.sass
+++ b/app/src/style/calendar.sass
@@ -8,6 +8,8 @@ $defaultMargin: 2%
     width: 60%
     padding: $defaultMargin
     margin: 0 auto
+    .input-group
+      margin-bottom: $defaultMargin - 1%
 
     .maxDurationField
       width: 20%
