--- a/app/src/style/userDetails.sass
+++ b/app/src/style/userDetails.sass
@@ -18,5 +18,17 @@ $defaultMargin: 1%
       text-align: right
       margin-right: $defaultMargin
 
+    .userDetailsValues
+      width: 49%
+      text-align: left
+      margin-left: $defaultMargin
+
   #resetPasswordButton, #backToCalendarButton
-    width: 25%
+    margin-top: $defaultMargin
+    width: 10%
+
+//  #resetPasswordButton
+//    margin-right: $defaultMargin
+
+//  #backToCalendarButton
+//    margin-left: $defaultMargin
