--- a/app/src/templates/userDetails.hbs
+++ b/app/src/templates/userDetails.hbs
@@ -2,32 +2,32 @@
   <h2 id="userDetailsTitle">Your information</h2>
   <div class="userDetailsWrapper">
     <label class="userDetailsLabel">ID: </label>
-    <span >{{id}}</span>
+    <span class="userDetailsValues">{{id}}</span>
   </div>
 
   <div class="userDetailsWrapper">
     <label class="userDetailsLabel">Username: </label>
-    <span >{{username}}</span>
+    <span class="userDetailsValues">{{username}}</span>
   </div>
 
   <div class="userDetailsWrapper">
     <label class="userDetailsLabel">First name: </label>
-    <span >{{firstName}}</span>
+    <span class="userDetailsValues">{{firstName}}</span>
   </div>
 
   <div class="userDetailsWrapper">
     <label class="userDetailsLabel">Last name: </label>
-    <span >{{lastName}}</span>
+    <span class="userDetailsValues">{{lastName}}</span>
   </div>
 
   <div class="userDetailsWrapper">
     <label class="userDetailsLabel">E-mail: </label>
-    <span >{{email}}</span>
+    <span class="userDetailsValues">{{email}}</span>
   </div>
 
   <div class="userDetailsWrapper">
     <label class="userDetailsLabel">Account created at: </label>
-    <span id="userCreatedAt">{{createdAt}}</span>
+    <span id="userCreatedAt" class="userDetailsValues">{{createdAt}}</span>
   </div>
 
   <button id="resetPasswordButton" class="btn btn-success">Reset password</button>
