--- a/app/src/templates/calendar.hbs
+++ b/app/src/templates/calendar.hbs
@@ -3,7 +3,7 @@
     <div class="row">
     <br />
       <form id="maxDurationWrapper">
-        <div class="input-group" onsubmit="return false;">
+        <div class="input-group">
           <label class="maxDurationField input-group-addon">Maximum duration in minutes:</label>
           <input id="maxDuration" type="number" placeholder="180 default" class="form-control" />
         </div>
